# messaging

./: README.md  pyproject.toml
rabbitmq/: .editorconfig
rabbitmq/basic/: receiver.py  sender.py
rabbitmq/example2/: receiver.py  sender.py
rabbitmq/example3/: receiver.py  sender.py
rabbitmq/example4/: receiver.py  sender.py
rabbitmq/example5/: receiver.py  sender.py
rabbitmq/example6/: client.py  server.py
