[tool.poetry]
name = "messaging"
version = "0.1.0"
description = ""
authors = ["Gabriel Fonseca <fonsecacrz7@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
pika = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
